// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource Generator: Ingress should generate a host for a single url 1`] = `
"# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: \${CI_PROJECT_PATH_SLUG}-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'

spec:
  tls:
    - secretName: \${CI_PROJECT_PATH_SLUG}
      hosts:
        - smartive.ch
  rules:
    - host: smartive.ch
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: \${CI_PROJECT_PATH_SLUG}
              port:
                number: 80
"
`;

exports[`Resource Generator: Ingress should generate a host for multiple urls 1`] = `
"# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: \${CI_PROJECT_PATH_SLUG}-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'

spec:
  tls:
    - secretName: \${CI_PROJECT_PATH_SLUG}
      hosts:
        - smartive.ch
        - www.smartive.ch
  rules:
    - host: smartive.ch
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: \${CI_PROJECT_PATH_SLUG}
              port:
                number: 80
    - host: www.smartive.ch
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: \${CI_PROJECT_PATH_SLUG}
              port:
                number: 80
"
`;

exports[`Resource Generator: Ingress should not generate a host for an empty url 1`] = `
"# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: \${CI_PROJECT_PATH_SLUG}-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'

spec:
  tls:
    - secretName: \${CI_PROJECT_PATH_SLUG}
      hosts:
        - smartive.ch
        - www.smartive.ch
  rules:
    - host: smartive.ch
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: \${CI_PROJECT_PATH_SLUG}
              port:
                number: 80
    - host: www.smartive.ch
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: \${CI_PROJECT_PATH_SLUG}
              port:
                number: 80
"
`;
